Fix menu on mobile by deleting: /* Hide md-main */ .md-main { display: none; }

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -51,10 +51,6 @@ h6 {
     margin: 0;
     padding: 0;
 }
-/* Hide md-main */
-.md-main {
-    display: none;
-}
 
 /* Fonts */
 
